# whisper-rt-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: llm.rs  main.rs  tts.rs
