[package]
name = "whisper-rt-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
circular-buffer = "0.1.7"
cpal = "0.15.3"
eyre = "0.6.12"
fon = "0.6.0"
hound = "3.5.1"
rubato = "0.15.0"
webrtc-vad = "0.4.0"
whisper-rs = { git = "https://github.com/thewh1teagle/whisper-rs", branch = "v1.6.2", features = ["opencl", "whisper-cpp-tracing"] }
